objects/TILBP__TI_Purchase__c.object
<CustomObject>
    <fields>
        <fullName>TILBP__AmountChanged__c</fullName>
        <label>Amount Changed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TILBP__AmountDisputed__c</fullName>
        <label>Amount Disputed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TILBP__AmountNet__c</fullName>
        <label>Amount Net</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TILBP__AmountRefunded__c</fullName>
        <label>Amount Refunded</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TILBP__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>TI Purchases</relationshipLabel>
        <relationshipName>TI_Purchases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TILBP__Coupon__c</fullName>
        <label>Coupon</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TILBP__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TILBP__FailureCode__c</fullName>
        <label>Failure Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TILBP__FailureMessage__c</fullName>
        <label>Failure Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TILBP__GiftRecipientEmail__c</fullName>
        <label>Gift Recipient Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>TILBP__Group_ID__c</fullName>
        <externalId>true</externalId>
        <label>Group ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TILBP__Items__c</fullName>
        <label>Items</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TILBP__Order_ID__c</fullName>
        <externalId>true</externalId>
        <label>Order ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TILBP__PurchaseRevenueType__c</fullName>
        <label>Purchase Revenue Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TILBP__PurchaseType__c</fullName>
        <label>Purchase Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TILBP__Purchase_ID__c</fullName>
        <externalId>true</externalId>
        <label>Purchase ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TILBP__Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TILBP__Success__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Success</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TILBP__TI_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>TI ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>TILBP__Timestamp__c</fullName>
        <label>Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TILBP__Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>TI Purchase</label>
    <nameField>
        <label>TI Purchase Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TI Purchases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>